--- a/index.html
+++ b/index.html
@@ -68,15 +68,17 @@ header h1 {
 
 /* Section Styles */
 .section {
-    display: flex;
+    display: block;
     flex-wrap: wrap; /* Allow items to wrap onto the next line */
     justify-content: space-between; /* Space between the items */
     padding: 10px;
 }
 .section .card {
+    display: block;
+    width: 100%;
     flex: 0 1 calc(50px - 20px); /* Two cards per row */
-    margin: 10px; /* Margin for spacing */
-    padding: 15px;
+    margin: 20px 0 ; /* Margin for spacing */
+    padding: 15px 0;
     background-color: #fff;
     text-align: center;
     border-radius: 6px;
