--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ a {
         <div id="toddlerSection" style="display: block;">
             
             <div class="search-bar" id="searchBar">
-                <input type="text" id="toddlerSearchInput" placeholder="Search Toddler...">
+                <input type="text" id="toddlerSearchInput">
                 <button onclick="filterComponents('toddler')">Search</button>
             </div>
             
