--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@ a {
                         <p>FUELONE Whey Max</p>
                     </div>
                 </a>
+                <a href="https://amzn.to/49IZZci" target="_blank">
+                    <div class="card">
+                        <img src="Toddler7.jpeg" alt="Toddler Product 1">
+                        <p>Trimmer</p>
+                    </div>
+                </a>
+                <a href="https://amzn.to/4giAfpG" target="_blank">
+                    <div class="card">
+                        <img src="Toddler8.png" alt="Toddler Product 1">
+                        <p>Women shoes</p>
+                    </div>
+                </a>
 
             </div>
         </div>       
